<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.first.group</groupId>
    <artifactId>Cinema_Talk</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>cinema-talk</name>
    <description>Middle web project with Movie Community</description>

    <!-- Java 버전 -->
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <log4j2.version>2.23.1</log4j2.version>
    </properties>
	
    <dependencies>
        <!-- ========================= -->
        <!-- Servlet / JSP (Tomcat 제공) -->
        <!-- ========================= -->

        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>3.1.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- ========================= -->
        <!-- JSTL -->
        <!-- ========================= -->

        <dependency>
            <groupId>jakarta.servlet.jsp.jstl</groupId>
            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
            <version>3.0.1</version>
        </dependency>
        

        <!-- ========================= -->
        <!-- JSON Processing -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240205</version>
        </dependency>

        <!-- ========================= -->
        <!-- Lombok -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>

        <!-- ========================= -->
        <!-- MyBatis -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.5.19</version>
        </dependency>

        <!-- ========================= -->
        <!-- Oracle JDBC -->
        <!-- ========================= -->

        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>19.3.0.0</version>
        </dependency>

        <!-- ========================= -->
        <!-- Log4j2 -->
        <!-- ========================= -->

        <!-- Log4j API -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <!-- Log4j Core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <!-- SLF4J 연동 (MyBatis 등과 함께 쓰기 좋음) -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
	
		<!-- 비밀번호 암호화 BCrypt -->
		<dependency>
  			<groupId>org.mindrot</groupId>
  			<artifactId>jbcrypt</artifactId>
  			<version>0.4</version>
		</dependency>
		
    </dependencies>
	
	
	
	<!-- Maven 빌드 설정 -->
	<build>
    <plugins>
		<!-- 배치 실행을 위한 exec-maven-plugin -->
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>exec-maven-plugin</artifactId>
			<version>3.1.0</version>
			<configuration>
				<mainClass>batch.TmdbBatchMain</mainClass>
			</configuration>
		</plugin>
    </plugins>
	</build>
	
	
</project>
